# cs-shift-scheduler

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  database.rules.json  firebase.json  pyproject.toml  requirements.txt  scheduler.py
.github/: copilot-instructions.md
docs/: labor-report-api.md  slack-daily-notifications-setup.md
examples/: schedule_demo.csv
functions/: api_fastapi.py  google_calendar_service.py
scheduler-ui/: Dockerfile  firebase.json  index.html  package.json  tailwind.config.js  vite.config.js
scheduler-ui/public/demo/: employees.json  schedule-2026-07-06-v2.json  schedule-2026-07-06-v3.json  schedule-2026-07-06.json
scheduler-ui/src/: App.jsx  firebase.js  main.jsx
scheduler-ui/src/components/: BulkGenerationModal.jsx  ConfigTab.jsx  CustomDatePicker.jsx  CustomShiftModal.jsx  DataTab.jsx  EmployeeList.jsx  FreeShiftRequestModal.jsx  GanttTimeline.jsx  LoadingBar.jsx  Login.jsx  Modal.jsx  MonthCalendar.jsx  MyPage.jsx  OvertimeModal.jsx  RequestTab.jsx  SettingsTab.jsx  ShiftCard.jsx  WeekGrid.jsx
scheduler-ui/src/config/: emailjs.config.js
scheduler-ui/src/constants/: shifts.js
scripts/: README.md  analyze_feasibility.py  audit.sh  audit_fix.sh  demo.py  deploy.sh  diagnose_infeasibility.py  generate.py  populate_employees.py  setup_deployment.sh
tests/: __init__.py  test_consecutive_nights.py  test_data.py  test_eka_case.py  test_high_traffic_days.py  test_labor_report.py  test_preassigned_rest_rule.py  test_preassigned_shifts.py  test_rest_rule_fix.py  test_scheduler.py
tools/: compute_week_summary.py
(+19 files in other folders)
