[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-scheduler"
version = "1.0.0"
description = "24/7 Customer Support Shift Scheduler using CP-SAT constraint solver"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "CS Scheduler Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ortools>=9.8.3296",
    "pendulum>=3.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
cs-scheduler = "scheduler:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=scheduler --cov-report=term-missing"